--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     style="bold"
     android:layout_width="match_parent"
     android:background="#EAEAEA"
@@ -10,7 +11,312 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/textView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_weight="0"
+                android:src="@drawable/main_logo"
+                android:text="로그인" />
+
+            <TextView
+                android:layout_width="359dp"
+                android:layout_height="match_parent"
+                android:background="#CBD5DD"
+                android:gravity="center"
+                android:text="공구합시당! 메인 페이지"
+                android:textSize="30sp"
+                android:typeface="monospace" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="<학과 선택>"
+            android:textSize="20sp"
+            android:typeface="monospace" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.17">
+
+            <Button
+                android:id="@+id/softwarebutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:backgroundTint="#CBD5DD"
+                android:text="소프트웨어"
+                app:layout_constraintEnd_toStartOf="@+id/computerbutton"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintWidth_percent="0.33" />
+
+            <Button
+                android:id="@+id/computerbutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:backgroundTint="#CBD5DD"
+                android:text="컴퓨터공학"
+                app:layout_constraintEnd_toStartOf="@+id/electricbutton"
+                app:layout_constraintStart_toEndOf="@+id/softwarebutton"
+                app:layout_constraintWidth_percent="0.33" />
+
+            <Button
+                android:id="@+id/electricbutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:backgroundTint="#CBD5DD"
+                android:text="전자공학과"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/computerbutton"
+                app:layout_constraintWidth_percent="0.33" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="<카테고리 선택>"
+            android:textSize="20sp"
+            android:typeface="monospace" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.17">
+
+            <Button
+                android:id="@+id/clothes"
+                android:layout_width="104dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:backgroundTint="#CBD5DD"
+                android:text="옷"
+                app:layout_constraintEnd_toStartOf="@+id/books"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintWidth_percent="0.33" />
+
+            <Button
+                android:id="@+id/books"
+                android:layout_width="104dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:backgroundTint="#CBD5DD"
+                android:text="책"
+                app:layout_constraintEnd_toStartOf="@+id/others"
+                app:layout_constraintStart_toEndOf="@+id/clothes"
+                app:layout_constraintWidth_percent="0.33" />
+
+            <Button
+                android:id="@+id/others"
+                android:layout_width="104dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:backgroundTint="#CBD5DD"
+                android:text="기타"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/books"
+                app:layout_constraintWidth_percent="0.33" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="<인기글>"
+            android:textSize="20sp"
+            android:typeface="monospace" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/most1text"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="1"/>
+
+            <Button
+                android:id="@+id/most1button"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_margin="10dp"
+                android:background="#00FFFFFF"
+                android:text="게시글 제목을 입력하시오"
+                android:textColor="#AAAAAA"
+                android:textSize="10dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/most2text"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="2"/>
+
+            <Button
+                android:id="@+id/most2button"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_margin="10dp"
+                android:background="#00FFFFFF"
+                android:text="게시글 제목을 입력하시오"
+                android:textColor="#AAAAAA"
+                android:textSize="10dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/most3text"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="3"/>
+
+            <Button
+                android:id="@+id/most3button"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_margin="10dp"
+                android:background="#00FFFFFF"
+                android:text="게시글 제목을 입력하시오"
+                android:textColor="#AAAAAA"
+                android:textSize="10dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/most4text"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="4"/>
+
+            <Button
+                android:id="@+id/most4button"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_margin="10dp"
+                android:background="#00FFFFFF"
+                android:text="게시글 제목을 입력하시오"
+                android:textColor="#AAAAAA"
+                android:textSize="10dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/most5text"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="5"/>
+
+            <Button
+                android:id="@+id/most5button"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_margin="10dp"
+                android:background="#00FFFFFF"
+                android:text="게시글 제목을 입력하시오"
+                android:textColor="#AAAAAA"
+                android:textSize="10dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/most6text"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="6"/>
+
+            <Button
+                android:id="@+id/most6button"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_margin="10dp"
+                android:background="#00FFFFFF"
+                android:text="게시글 제목을 입력하시오"
+                android:textColor="#AAAAAA"
+                android:textSize="10dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/most7text"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="7"/>
+
+            <Button
+                android:id="@+id/most7button"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_margin="10dp"
+                android:background="#00FFFFFF"
+                android:text="게시글 제목을 입력하시오"
+                android:textColor="#AAAAAA"
+                android:textSize="10dp" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1">
 
             <Button
                 android:id="@+id/logoutButton"
@@ -18,8 +324,14 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#CBD5DD"
                 android:text="로그아웃"
-                android:textColor="#000000"/>
-
-
+                android:textColor="#000000"
+                tools:layout_editor_absoluteX="-40dp"
+                tools:layout_editor_absoluteY="100dp" />
         </LinearLayout>
+
+    </LinearLayout>
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
