--- a/app/src/main/res/layout/activity_basic_category.xml
+++ b/app/src/main/res/layout/activity_basic_category.xml
@@ -7,7 +7,7 @@
 
 
     <ListView
-        android:id="@+id/Major_List"
+        android:id="@+id/List"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </ListView>
