--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -29,7 +29,7 @@
                 android:layout_height="match_parent"
                 android:background="#CBD5DD"
                 android:gravity="center"
-                android:text="공구합시당! 카테고리 선택"
+                android:text="공구합시당! 게시글 작성"
                 android:textSize="30sp"
                 android:typeface="monospace" />
         </LinearLayout>
@@ -37,7 +37,186 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="<게시글>"
+                android:textSize="25sp"
+                android:typeface="monospace" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.2"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center"
+                    android:text="학과:"
+                    android:textColor="#000000"
+                    android:textSize="25sp"
+                    android:typeface="monospace" />
+
+                <EditText
+                    android:id="@+id/departmentEditText"
+                    android:layout_width="114dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:ems="10"
+                    android:inputType="text" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center"
+                    android:text="분야:"
+                    android:textColor="#000000"
+                    android:textSize="25sp"
+                    android:typeface="monospace" />
+
+                <EditText
+                    android:id="@+id/categoryEditText"
+                    android:layout_width="114dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:ems="10"
+                    android:inputType="text" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.15"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center"
+                    android:text="제목:"
+                    android:textColor="#000000"
+                    android:textSize="25sp"
+                    android:typeface="monospace" />
+
+                <EditText
+                    android:id="@+id/titleEditText"
+                    android:layout_width="300dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:ems="10"
+                    android:hint="제목을 입력하시오"
+                    android:inputType="text" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.6">
+
+                <EditText
+                    android:id="@+id/contentEditText"
+                    android:layout_width="370dp"
+                    android:layout_height="250dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:ems="10"
+                    android:hint="내용을 입력하시오"
+                    android:inputType="textEmailAddress" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.15"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center"
+                    android:text="모집인원:"
+                    android:textColor="#000000"
+                    android:textSize="25sp"
+                    android:typeface="monospace" />
+
+                <EditText
+                    android:id="@+id/limitEditText"
+                    android:layout_width="70dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:ems="10"
+                    android:inputType="text" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center"
+                    android:text="명"
+                    android:textColor="#000000"
+                    android:textSize="25sp"
+                    android:typeface="monospace" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.15"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/getpictureButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#CBD5DD"
+                    android:text="사진 올리기"
+                    android:textColor="#000000"
+                    android:layout_marginLeft="20dp"/>
+
+                <ImageView
+                    android:id="@+id/pictureView"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="0"
+                    android:src="@drawable/main_logo"
+                    android:text="그림 미리보기"
+                    android:layout_marginLeft="10dp"/>
+                <Button
+                    android:id="@+id/postButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#CBD5DD"
+                    android:text="게시하기"
+                    android:textColor="#000000"
+                    android:layout_marginLeft="15dp"/>
+
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
