--- a/app/src/main/res/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity_view_post.xml
@@ -36,18 +36,100 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="234dp"
+            android:layout_weight="0.4"
             android:orientation="vertical">
 
+            <EditText
+                android:id="@+id/titleEditText"
+                android:layout_width="371dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:ems="10"
+                android:hint="제목을 입력하시오"
+                android:inputType="text" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="161dp"
+                android:layout_weight=""
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/pictureView"
+                    android:layout_width="150dp"
+                    android:layout_height="121dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="0"
+                    android:src="@drawable/main_logo"
+                    android:text="그림 미리보기" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="15dp"
+                    android:gravity="center"
+                    android:text="모집인원:"
+                    android:textColor="#000000"
+                    android:textSize="25sp"
+                    android:typeface="monospace" />
+
+                <EditText
+                    android:id="@+id/limitEditText"
+                    android:layout_width="70dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:ems="10"
+                    android:inputType="text" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="15dp"
+                    android:gravity="center"
+                    android:text="명"
+                    android:textColor="#000000"
+                    android:textSize="25sp"
+                    android:typeface="monospace" />
+
+                <Button
+                    android:id="@+id/joinButton"
+                    android:layout_width="147dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="-170dp"
+                    android:layout_marginTop="80dp"
+                    android:backgroundTint="#CBD5DD"
+                    android:text="참가하기"
+                    android:textColor="#000000" />
+
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/contentEditText"
+                android:layout_width="401dp"
+                android:layout_height="419dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:ems="10"
+                android:hint="내용을 입력하시오"
+                android:inputType="textEmailAddress" />
         </LinearLayout>
+
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.075">
+            android:layout_weight="0.05">
 
             <Button
                 android:id="@+id/logoutButton"
